# sai2-primitives

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt
examples/02-puma_control_posori_tasks/: 02-puma_control_posori_tasks.cpp
examples/03-kuka_arm_motion_primitive/: 03-kuka_arm_motion_primitive.cpp
examples/04-kuka_surface_surface_alignment/: 04-kuka_surface_surface_alignment.cpp  world.urdf
examples/05-kuka_screwing/: 05-kuka_screwing.cpp  Bottle_NoThreads.stl  CMakeLists.txt  Cap (no threads).stl  bottle.urdf  kuka_iiwa.urdf  world.urdf
examples/05-panda_screwing/: 05-panda_screwing.cpp  CMakeLists.txt  Cap (with threads).stl  bottle.urdf  panda_arm.urdf  world.urdf
examples/05-two_pumas/: 05-two_pumas.cpp  05-two_pumas_BACKUP.cpp  CMakeLists.txt  puma_gripper.urdf  world_puma.urdf
examples/06-kuka_full_motion_trajectory/: 06-kuka_full_motion_trajectory.cpp  world.urdf
src/dataPlotter/: dataPlotter.ipynb
src/dataPlotter/.ipynb_checkpoints/: dataPlotter-checkpoint.ipynb
src/dataPlotter/Data/: 1dataSurfAlign_pos_0.150000_2018-12-04_14-12-47.csv  2dataSurfAlign_pos_0.300000_2018-12-04_14-14-05.csv  3dataSurfAlign_pos_0.400000_2018-12-04_14-15-29.csv  4dataSurfAlign_pos_0.150000_2018-12-04_14-16-48.csv  5dataSurfAlign_pos_0.150000_2018-12-04_14-18-58.csv  dataKukaScrew_2018-12-04_00-59-38.csv  dataPandaScrew_2018-12-04_01-02-01.csv  dataPandaScrew_2018-12-05_23-20-45.csv  dataPandaScrew_2019-05-16_16-24-06.csv  data_0_2.csv  data_0_3.csv  (+12 more)
src/primitives/: RedundantArmMotion.cpp  RedundantArmMotion.h  ScrewingAlignment.cpp  ScrewingAlignment.h
(+2 files in other folders)
